--- a/style.css
+++ b/style.css
@@ -10,27 +10,23 @@
 
 body {
     font-family: 'Quicksand', sans-serif;
-    margin: 0px auto;
-    background-color: var(--secondary-color);
+    background-color: var(--secondary-color);    
 }
 
 
-.header{
+h1{
+    margin: auto;
     background-color: var(--primary-color);
     color: var(--white-color);
+    width: fit-content;
     padding: 0.5rem 2rem;
     text-align: center;
-    font-size: x-large;
-    font-weight: bold;
-}
-
-
-main{
-    text-align: center;
-    width: 20vw;
+    border-radius: 0.5rem;
 }
 
 .container{
+    text-align: center;
+    width: 20vw;
     padding: 2rem;
     margin: auto;
 }
@@ -68,9 +64,10 @@ button {
 }
 
 #output {
-    display: block;
-    font-size: large;
+    font-size: large;    
     color: var(--primary-color);
     font-weight: bold;
     margin: 1rem, auto;
+    margin-top: 0%;
+    text-align: center;
 }
